# notes

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  SKILLS.md  TRACKER.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/ai-workspace/: Cargo.toml
crates/ai-workspace/src/: ask.rs  chunk.rs  decode.rs  error.rs  lib.rs  retrieve.rs  suggest.rs  text.rs  verify.rs
crates/app-domain/: Cargo.toml
crates/app-domain/src/: error.rs  event.rs  hlc.rs  id.rs  kind.rs  lib.rs  time.rs
crates/app-nlp/: Cargo.toml
crates/app-nlp/src/: context.rs  datetime.rs  lib.rs  parser.rs  recurrence.rs  types.rs
crates/app-service/: Cargo.toml
crates/app-service/src/: ask.rs  calendar.rs  capture.rs  dto.rs  lib.rs  notebooks.rs  notes.rs  reminders.rs  search.rs  session.rs  stubs.rs  tasks.rs  util.rs
crates/app-service/tests/: m0_walking_skeleton.rs  m2_meeting_pipeline.rs
crates/calendar/: Cargo.toml
crates/calendar/src/: adapters.rs  caldav.rs  conflict.rs  error.rs  ical.rs  lib.rs  model.rs  project.rs  sync.rs  transport.rs
crates/calendar/tests/: ical_roundtrip.rs  sync_caldav.rs
crates/capture-api/: Cargo.toml
crates/capture-api/src/: lib.rs
crates/capture-linux/: Cargo.toml
crates/capture-linux/src/: lib.rs
crates/capture-macos/: Cargo.toml
crates/capture-macos/src/: lib.rs
crates/capture-windows/: Cargo.toml
crates/capture-windows/src/: lib.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: embedder.rs  error.rs  lib.rs  math.rs  quantize.rs  store.rs
crates/export/: Cargo.toml
crates/export/src/: lib.rs
crates/links/: Cargo.toml
crates/links/src/: edge.rs  error.rs  graph.rs  lib.rs  query.rs  reconcile.rs  test_support.rs
crates/llm-api/: Cargo.toml
crates/llm-api/src/: artifact.rs  lib.rs
crates/llm-llamacpp/: Cargo.toml
crates/llm-llamacpp/src/: lib.rs
crates/media-pipeline/: Cargo.toml
crates/media-pipeline/src/: chunk.rs  downmix.rs  error.rs  lib.rs  normalize.rs  pipeline.rs  resample.rs  timeline.rs  vad.rs
crates/model-manager/: Cargo.toml
crates/model-manager/src/: checksum.rs  disk.rs  download.rs  error.rs  lib.rs  manifest.rs  pipeline.rs  registry.rs  select.rs  test_support.rs  tier.rs
crates/notes/: Cargo.toml
crates/notes/src/: error.rs  extract.rs  lexo.rs  lib.rs  markdown.rs  model.rs  projection.rs  validate.rs
crates/notes/tests/: save_projection_latency.rs
crates/reminders/: Cargo.toml
crates/reminders/src/: error.rs  lib.rs  recurrence.rs  reminder.rs  state.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: backend.rs  capability.rs  catchup.rs  clock.rs  error.rs  gate.rs  horizon.rs  lib.rs  service.rs  wheel.rs
crates/search/: Cargo.toml
crates/search/src/: error.rs  filter.rs  fts.rs  fusion.rs  lib.rs  palette.rs  query.rs  snippet.rs  sql.rs
crates/search/tests/: fts_execution.rs
crates/speech-api/: Cargo.toml
crates/speech-api/src/: lib.rs
crates/speech-parakeet/: Cargo.toml
crates/speech-parakeet/src/: lib.rs
crates/speech-whisper/: Cargo.toml
crates/speech-whisper/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: blobs.rs  db.rs  error.rs  journal.rs  keystore.rs  layout.rs  lib.rs  oplog.rs  rebuild.rs
crates/storage/src/migrations/: V001__initial.sql  V002__meeting.sql  mod.rs
crates/sync-core/: Cargo.toml
crates/sync-core/src/: lib.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: bucket.rs  domain.rs  error.rs  lib.rs  order_key.rs  transition.rs
crates/tauri-app/: Cargo.toml  build.rs  tauri.conf.json
crates/tauri-app/capabilities/: main-window.json  quick-capture.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: commands.rs  lib.rs  main.rs  session.rs
docs/: README.md  casual-note-architecture.md  casual-note-calendar.md  casual-note-data-model.md  casual-note-feature-specs.md  casual-note-hld.md  casual-note-prd.md  casual-note-research.md  casual-note-roadmap.md  local_meeting_intelligence_architecture.docx  local_meeting_intelligence_hld.docx
scripts/: ci-local.sh
site/: 404.html  CNAME  index.html  llms.txt  robots.txt  sitemap.xml
ui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
ui/src/features/ai/: AskView.tsx  ai.test.ts  index.ts
ui/src/features/backlinks/: Backlinks.tsx  index.ts
ui/src/features/calendar/: CalendarView.tsx  calendar.test.ts  index.ts
ui/src/features/daily/: index.ts
ui/src/features/editor/: Editor.tsx  SlashMenu.tsx  WikilinkMenu.tsx  index.ts  useCompletion.ts
ui/src/features/editor/extensions/: Callout.tsx  TaskItem.tsx  blockId.ts  index.ts  marks.ts  table.ts
ui/src/features/graph/: index.ts
ui/src/features/meetings/: LiveView.tsx  Meetings.tsx  ReviewView.tsx  SourcePicker.tsx  index.ts  meetings.test.ts  useMeetingSession.ts
ui/src/features/notebooks/: NoteList.tsx  NotebookTree.tsx  Sidebar.tsx  index.ts
ui/src/features/palette/: index.ts
ui/src/features/quick-capture/: QuickCapture.tsx  QuickCaptureWindow.tsx  index.ts
ui/src/features/reminders/: index.ts
ui/src/features/search/: index.ts
ui/src/features/settings/: index.ts
ui/src/features/tasks/: TasksView.tsx  index.ts  tasks.test.ts
ui/src/lib/: api.ts  mock.test.ts  mock.ts
