[package]
publish = false                 # internal workspace crate — never published to crates.io
name = "ai-workspace"
description = "Evidence-grounded Ask pipeline: retrieve -> RRF fuse -> (rerank) -> grounded decode(AnswerV1) -> citation-verify -> cited suggestions."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "ai_workspace"

# Pure-Rust + mock layer (Architecture §5 "AI workspace", HLD §8.5, Data Model
# §14.2). Runs with NO real LLM and NO real embedding model — MockLlm (llm-api)
# and MockEmbedder (embeddings) make the whole grounded Ask flow testable offline.
# Depends strictly downward: the retrieval traits (embeddings), the RRF fusion +
# query models (search), the AnswerV1 contract + generation engine (llm-api), and
# the shared vocabulary (app-domain). `rusqlite` is the SAME workspace-pinned
# build storage/embeddings link, so no second SQLite is dragged into the tree.
[dependencies]
app-domain = { workspace = true }
embeddings = { path = "../embeddings" }
search     = { path = "../search" }
llm-api    = { path = "../llm-api" }
rusqlite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
