[package]
publish = false                 # internal workspace crate — never published to crates.io
name = "capture-api"
description = "STUB (later phase): unified capture trait + honest per-platform capability report."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

