[package]
publish = false                 # internal workspace crate — never published to crates.io
name = "capture-linux"
description = "STUB (later phase): Linux PipeWire/WirePlumber + xdg-portal capture adapter."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

