[package]
publish = false                 # internal workspace crate — never published to crates.io
name = "capture-windows"
description = "STUB (later phase): Windows WASAPI process-loopback capture adapter."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

