[package]
name = "links"
description = "Polymorphic edge table, backlinks (derived-on-read), unlinked mentions, neighborhood graph."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
app-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Direct rusqlite + SQLCipher (never tauri-plugin-sql). Query builders take a
# borrowed &Connection; the crate opens no connection of its own.
rusqlite = { workspace = true }
