[package]
publish = false                 # internal workspace crate — never published to crates.io
name = "llm-api"
description = "Contract layer: GBNF-constrained LLM trait (repair -> deterministic fallback) + MeetingArtifactV1 / AnswerV1 JSON contracts."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "llm_api"

# Pure CONTRACT crate: the LLM trait, the repair->fallback generation contract,
# and the authoritative MeetingArtifactV1 / AnswerV1 serde structs (Data Model
# §14). The llm-llamacpp backend owns FFI; no unsafe here.
[dependencies]
app-domain = { path = "../app-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
