[package]
name = "media-pipeline"
description = "STUB (later phase): downmix/resample→16k mono f32, DC/gain, VAD, chunking, drift."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

