[package]
publish = false                 # internal workspace crate — never published to crates.io
name = "speech-api"
description = "STUB (later phase): STT trait (two-pass live+final, model profiles)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

