[package]
publish = false                 # internal workspace crate — never published to crates.io
name = "speech-parakeet"
description = "STUB (later phase): ONNX Parakeet TDT v3 Turbo (English) opt-in STT adapter."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

