[package]
publish = false                 # internal workspace crate — never published to crates.io
name = "speech-whisper"
description = "STUB (later phase): whisper.cpp STT adapter (default)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

